# Cpp-Watchdog

./: .gitignore  README.md
example/: CMakeLists.txt  test-results.xml
example/src/: bar.cpp  bar.h  foo.cpp
example/test/: CMakeLists.txt  bar_test.cpp  foo_test.cpp
src/: cpp-watchdog  cpp_watchdog.py  event_handler.py  pausing_observer.py  window.py
